isaacgymenvs/log/20220802_1227/FactoryTaskInsertion.log

train.py:49: UserWarning: 
The version_base parameter is not specified.
Please specify a compatability version level, or None.
Will assume defaults for version 1.1
  @hydra.main(config_name="config", config_path="./cfg")
/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/defaults_list.py:251: UserWarning: In 'config': Defaults list is missing `_self_`. See https://hydra.cc/docs/upgrades/1.0_to_1.1/default_composition_order for more information
  warnings.warn(msg, UserWarning)
/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/defaults_list.py:415: UserWarning: In config: Invalid overriding of hydra/job_logging:
Default list overrides requires 'override' keyword.
See https://hydra.cc/docs/next/upgrades/1.0_to_1.1/defaults_list_override for more information.

  deprecation_warning(msg)
Importing module 'gym_37' (/home/zihan/software/isaacgym/python/isaacgym/_bindings/linux-x86_64/gym_37.so)
Setting GYM_USD_PLUG_INFO_PATH to /home/zihan/software/isaacgym/python/isaacgym/_bindings/linux-x86_64/usd/plugInfo.json
PyTorch version 1.12.0+cu102
Device count 2
/home/zihan/software/isaacgym/python/isaacgym/_bindings/src/gymtorch
Using /home/zihan/.cache/torch_extensions/py37_cu102 as PyTorch extensions root...
Emitting ninja build file /home/zihan/.cache/torch_extensions/py37_cu102/gymtorch/build.ninja...
Building extension module gymtorch...
Allowing ninja to set a default number of workers... (overridable by setting the environment variable MAX_JOBS=N)
/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/hydra.py:127: UserWarning: Future Hydra versions will no longer change working directory at job runtime by default.
See https://hydra.cc/docs/next/upgrades/1.1_to_1.2/changes_to_job_working_dir/ for more information.
  configure_logging=with_log_configuration,
/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/ray/autoscaler/_private/cli_logger.py:61: FutureWarning: Not all Ray CLI dependencies were found. In Ray 1.4+, the Ray CLI, autoscaler, and dashboard will only be usable via `pip install 'ray[default]'`. Please update your install command.
  "update your install command.", FutureWarning)
ninja: no work to do.
Error executing job with overrides: ['task=FactoryTaskInsertion', 'headless=False', 'wandb_activate=True', 'wandb_entity=quantumiracle']
An error occurred during Hydra's exception formatting:
AssertionError()
Loading extension module gymtorch...
Traceback (most recent call last):
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/utils.py", line 254, in run_and_report
    assert mdl is not None
AssertionError

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "train.py", line 188, in <module>
    launch_rlg_hydra()
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/main.py", line 95, in decorated_main
    config_name=config_name,
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/utils.py", line 396, in _run_hydra
    overrides=overrides,
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/utils.py", line 453, in _run_app
    lambda: hydra.run(
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/utils.py", line 296, in run_and_report
    raise ex
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/utils.py", line 213, in run_and_report
    return func()
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/utils.py", line 456, in <lambda>
    overrides=overrides,
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/_internal/hydra.py", line 132, in run
    _ = ret.return_value
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/core/utils.py", line 260, in return_value
    raise self._return_value
  File "/home/zihan/anaconda3/envs/x/lib/python3.7/site-packages/hydra/core/utils.py", line 186, in run_job
    ret.return_value = task_function(task_cfg)
  File "train.py", line 51, in launch_rlg_hydra
    from isaacgymenvs.utils.rlgames_utils import RLGPUEnv, RLGPUAlgoObserver, get_rlgames_env_creator
  File "/home/zihan/research/IsaacGymEnvs/isaacgymenvs/utils/rlgames_utils.py", line 37, in <module>
    from isaacgymenvs.tasks import isaacgym_task_map
  File "/home/zihan/research/IsaacGymEnvs/isaacgymenvs/tasks/__init__.py", line 36, in <module>
    from .factory.factory_task_insertion import FactoryTaskInsertion
  File "/home/zihan/research/IsaacGymEnvs/isaacgymenvs/tasks/factory/factory_task_insertion.py", line 296
    is_last_step = (self.progress_buf[0] == self.max_episode_length - 1)
               ^
SyntaxError: invalid syntax
